# auth1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  sqlx-data.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: data_uri.rs  otp_fmt.rs  parse_otp.rs
jwk/: Cargo.toml
jwk/fuzz/: Cargo.toml
jwk/fuzz/fuzz_targets/: jwt_conv.rs
jwk/src/: lib.rs
mail/: 5b53cbca-0f58-40c4-a918-236157f7db0b.eml
migrations/: 1_users.up.sql  2_certificates.up.sql  3_oob.sql  3_oob_secret.down.sql  3_oob_secret.up.sql  4_last_login.sql  5_verification.sql
migrations/2021-08-15-123441_create_users/: up.sql
migrations/2021-08-16-173952_create_keys/: down.sql  up.sql
migrations/2021-08-17-115423_create_sessions/: down.sql  up.sql
migrations/2021-09-20-143825_add_full_names/: down.sql  up.sql
migrations/2021-10-09-160427_create_certificates/: down.sql  up.sql
migrations/2021-10-09-160427_create_keypairs/: down.sql  up.sql
sdk/: Cargo.toml
sdk/src/: actix.rs  axum.rs  error.rs  lib.rs
src/: certmanager.rs  certstore.rs  client_info.rs  crypto.rs  email.rs  errors.rs  identity.rs  jwk.rs  jwt.rs  lib.rs  main.rs  models.rs  oidc.rs  oob.rs  password.rs  rate_limit.rs  remote_ip.rs  result.rs  routes.rs  schema.rs  token.rs  types.rs  util.rs  x509.rs
src/db/: mod.rs  postgres.rs  redis.rs
src/http/: account.rs  error.rs  extract.rs  jwks.rs  keys.rs  login.rs  mod.rs  token.rs  users.rs  verify.rs
src/jwt/: mod.rs
src/models/: certificate.rs  key.rs  keypair.rs  mod.rs  session.rs  user.rs
src/routes/: keys.rs  login.rs  mod.rs  refresh.rs  register.rs  reset.rs  token.rs  users.rs  verify.rs
src/routes/users/: mod.rs  sessions.rs
src/templates/: login.mjml  login.txt
src/token/: access_token.rs  mod.rs  refresh_token.rs
src/types/: data_uri.rs  db_x509.rs  email.rs  jwk.rs  mod.rs  name.rs  password.rs  x509_chain.rs
src/types/jwk/: b64.rs  mod.rs  x5.rs
src/x509/: ca.rs  chain.rs  mod.rs
tests/: integration.rs
tests/common/: mod.rs  test_user.rs
tests/token/: mod.rs
tests/users/: email.rs  mod.rs  sessions.rs  update.rs
