[workspace]
members = [".", "jwk", "sdk"]

[package]
name = "auth1"
version = "0.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
argon2 = "0.4.1"
auth1-sdk = { version = "0.1.1", path = "sdk" }
axum = { version = "0.5.15", features = ["headers"] }
base64 = "0.13.0"
blake3 = "1.3.1"
clap = { version = "3.2.17", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.23"
indoc = "1.0.7"
jsonwebtoken = "8.1.1"
jwk = { version = "0.1.0", path = "jwk" }
lettre = { version = "0.10.1", default-features = false, features = [
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "serde",
  "smtp-transport",
  "pool",
] }
openssl = "0.10.41"
rand = "0.8.5"
sentry = "0.27.0"
sentry-tower = { version = "0.27.0", features = ["http"] }
sentry-tracing = "0.27.0"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.1", features = [
  "runtime-tokio-rustls",
  "offline",
  "postgres",
  "time",
  "uuid",
] }
strfmt = "0.2.2"
thiserror = "1.0.35"
time = "0.3.13"
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.13", default-features = false, features = ["tracing"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
x509-parser = "0.14.0"

[features]
