[workspace]
members = [".", "jwk", "sdk"]

[package]
name = "auth1"
version = "0.2.14"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
arbitrary = { version = "1.1.7", optional = true, features = ["derive"] }
auth1-sdk = { version = "0.1.1", path = "sdk" }
axum = { version = "0.5.17", features = ["headers"] }
base64 = "0.13.0"
blake3 = "1.3.1"
clap = { version = "4.0.15", features = ["derive", "env"] }
data-encoding = "2.3.2"
dotenv = "0.15.0"
futures = "0.3.25"
handlebars = "4.3.5"
jsonwebtoken = "8.1.1"
jwk = { version = "0.1.0", path = "jwk" }
lettre = { version = "0.10.1", default-features = false, features = [
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "serde",
  "smtp-transport",
  "file-transport",
  "pool",
] }
mrml = "1.2.10"
notify = "5.0.0"
openssl = "0.10.42"
rand = "0.8.5"
sentry = "0.27.0"
sentry-tower = { version = "0.27.0", features = ["http"] }
sentry-tracing = "0.27.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_with = { version = "2.0.1", features = ["base64"] }
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "offline",
  "postgres",
  "time",
  "uuid",
] }
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["serde-human-readable"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4.13", default-features = false, features = ["tracing"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
x509-parser = "0.14.0"
