[workspace]
members = [".", "jwk", "sdk"]

[package]
name = "auth1"
version = "0.2.19"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
arbitrary = { version = "1.1.7", optional = true, features = ["derive"] }
auth1-sdk = { path = "sdk" }
axum = { version = "0.6.7", features = ["headers"] }
axum-extra = { version = "0.5.0", features = ["cookie"] }
axum-tracing-opentelemetry = { git = "https://github.com/akeamc/axum-tracing-opentelemetry" }
base64 = "0.21.0"
blake3 = "1.3.1"
clap = { version = "4.1.7", features = ["derive", "env"] }
data-encoding = "2.3.2"
dotenv = "0.15.0"
futures = "0.3.25"
handlebars = "4.3.5"
jsonwebtoken = "8.1.1"
jwk = { version = "0.1.0", path = "jwk" }
lettre = { version = "0.10.1", default-features = false, features = [
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "serde",
  "smtp-transport",
  "file-transport",
  "pool",
] }
mrml = "1.2.10"
notify = "5.0.0"
openidconnect = "2.5.0"
openssl = "0.10.42"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_with = { version = "2.0.1", features = ["base64"] }
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "offline",
  "postgres",
  "time",
  "uuid",
] }
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["serde-human-readable"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4.13", default-features = false, features = ["tracing"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
x509-parser = "0.14.0"
