[package]
name = "jwk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.1.6", features = ["derive"], optional = true }
base64 = "0.13.0"
der = { version = "0.6.0", features = ["oid", "derive", "alloc"] }
jsonwebtoken = "8.1.1"
openssl = "0.10.41"
serde = { version = "1.0.144", features = ["derive"] }
serde_with = { version = "2.0.1", features = ["base64"] }

[features]
fuzz = ["dep:arbitrary"]
