[package]
name = "jwk"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.1.6", features = ["derive"], optional = true }
base64 = "0.13.0"
der = { version = "0.6.0", features = ["oid", "derive", "alloc"] }
jsonwebtoken = "8.1.1"
openssl = "0.10.42"
serde = { version = "1.0.148", features = ["derive"] }
serde_with = { version = "2.0.0", features = ["base64"] }

[features]
fuzz = ["dep:arbitrary"]
