[package]
name = "auth1-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", optional = true, default-features = false }
actix-web-httpauth = { version = "0.8.0", optional = true }
cache_control = "0.2.0"
futures-core = "0.3.24"
futures-util = "0.3.24"
jsonwebtoken = "8.1.1"
jwk = { path = "../jwk" }
openssl = { version = "0.10.41", optional = true }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_with = { version = "2.0.0", features = ["base64"] }
thiserror = "1.0.33"
time = "0.3.14"
tokio = { version = "1.20.1", features = ["time"] }
uuid = { version = "1.1.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros"] }

[features]
actix = ["dep:actix-web", "dep:actix-web-httpauth"]
