[package]
name = "auth1-sdk"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-web = { version = "4", optional = true, default-features = false }
actix-web-httpauth = { version = "0.8.0", optional = true }
axum = { version = "0.5.17", default-features = false, optional = true, features = ["headers"] }
cache_control = "0.2.0"
futures-core = "0.3.24"
futures-util = "0.3.24"
http = { version = "0.2.8", optional = true }
jsonwebtoken = "8.1.1"
jwk = { path = "../jwk" }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "2.0.0", features = ["base64"] }
thiserror = "1.0.37"
time = "0.3.15"
tokio = { version = "1.21.2", features = ["time"] }
tracing = { version = "0.1.37", optional = true }
uuid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros"] }

[features]
actix = ["dep:actix-web", "dep:actix-web-httpauth", "http"]
axum = ["dep:axum", "http"]
