[package]
name = "auth1-sdk"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", optional = true, default-features = false }
actix-web-httpauth = { version = "0.8", optional = true }
axum = { version = "0.6", default-features = false, optional = true, features = ["headers"] }
cache_control = "0.2"
futures-core = "0.3"
futures-util = "0.3"
http = { version = "0.2.8", optional = true }
jsonwebtoken = "8.1.1"
jwk = { path = "../jwk" }
opentelemetry = "0.18"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.0", features = ["base64"] }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.21", features = ["time"] }
tracing = { version = "0.1", optional = true }
uuid = { version = "1.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["rt", "macros"] }

[features]
actix = ["dep:actix-web", "dep:actix-web-httpauth", "http"]
axum = ["dep:axum", "http"]
